<resources>
    <string name="app_name">HomeTownApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User</string>
    <string name="find_users">Find Users</string>
    <string name="welcome_to_hometown_app">Welcome to HomeTown App!!</string>
    <string name="nickname">Nickname :</string>
    <string name="password">Password :</string>
    <string name="country">Country :</string>
    <string name="state">State :</string>
    <string name="city">City :</string>
    <string name="year">Year :</string>
    <string name="lat_lon">Lat., Lon. :</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="set_location">Set Location</string>
    <string name="title_activity_find_users">FindUsersActivity</string>

    <string name="showList">List</string>
    <string name="showMap">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nickName">TextView</string>
    <string name="location">TextView</string>
    <string name="title_activity_user_helper">UserHelperActivity</string>
    <string name="school_year">TextView</string>

</resources>
